Almost finish the main game board: add sidebar components for displaying scores (not finished yet). Make Scoreboard dynamically resizable.

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,9 +7,11 @@
         <file>qml/main.qml</file>
         <file>qml/QuestionDelegate.qml</file>
         <file>qml/Scoreboard.qml</file>
-        <file>qml/ScoreboardForm.ui.qml</file>
         <file>qml/SidebarControlPanel.qml</file>
         <file>qml/TextField.qml</file>
         <file>qml/TextFieldForm.ui.qml</file>
+        <file>qml/TeamScore.qml</file>
+        <file>qml/GameBoard.qml</file>
+        <file>qml/BoardView.qml</file>
     </qresource>
 </RCC>
